<resources>
    <string name="app_name">Municipality</string>

    <!--sing in-->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password</string>
    <!--sign up-->
    <string name="first_name">First Name</string>
    <string name="father_name">Father Name</string>
    <string name="grand_father_name">Grand Father Name</string>
    <string name="family_name">Family Name</string>
    <string name="number_family_member">Number of family member</string>

    <string name="gender">Gender</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="id_number">Identification Number</string>
    <string name="date_birth">Date of Birth</string>
    <string name="place_birth">Place of Birth</string>

    <string name="passport_number">Passport Number</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="fax">Fax</string>

    <string name="work">Work</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="region">Region</string>
    <string name="zone">Zone</string>

    <string name="submit">Submit</string>

    <string name="err_msg_required">Required!</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="success_meg">You are successfully Registered !!</string>
    <string name="title_activity_home">Home</string>
    <string name="muni_information">municipality information</string>

    <string name="muni_name">municipality Name</string>
    <string name="city"> City</string>

    <string name="nav_header_title">User Login Name</string>

    <string name="title_activity_my_information">My Information</string>

    <string name="full_name">Full Name</string>

    <string name="title_activity_all_services">Municipality Services</string>
    <string name="log_out">Log Out</string>

    <string name="wrong_sign_in">wrong username or password</string>

    <string name="name_information">Name Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="address_information">Address Information</string>
    <string name="account_information">Account Information</string>
    <string name="request_service">Request this Service</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_my_services">My Services</string>
    <string name="save_and_send">Save and Send</string>

    <string name="name_service"> Service Name : </string>
    <string name="cost_service"> Service Cost</string>
    <string name="days_service">Response days</string>
    <string name="case_service"> Service Case : </string>
    <string name="note_service">Service note</string>
    <string name="not_valid">Not Valid</string>


    <string name="attachment_service">Service myAttachments</string>
    <string name="service_requirements">Service Requirements</string>
    <string name="view">show</string>
    <string name="download">download</string>
    <string name="upload">Upload</string>
    <string name="notes">Notes</string>


    <string name="title_activity_my_done_services">Done Services</string>
    <string name="title_activity_my_not_done_services">Not Done Services</string>
    <string name="title_activity_services_in_department"></string>


    <string name="ser_cas">حالة الخدمة </string>
    <string name="ser_cas_done">جاهزه</string>
    <string name="ser_cas_else">قيد الانتظار</string>

    <string name="ser_des">قرار الدائرة</string>
    <string name="ser_des_yes">تم القبول</string>
    <string name="ser_des_no">تم الرفض </string>
    <string name="ser_des_else">لم يتحدد</string>

    <string name="ser_com">تعليق الدائرة </string>
    <string name="ser_cost">مجموع تكلفة الدائره = </string>

    <string name="emp_com">تعليق الموظف </string>
    <string name="emp_cost">تكلفه الموظف </string>
    <string name="emp_att">مرفقات الموظف  </string>
    <string name="money">شيقل</string>
    <string name="Download">Downloading Done</string>
    <string name="edit">Edit</string>
    <string name="edit_done">Edit Done</string>
    <string name="title_activity_my_attachment">My Attachment</string>


    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="text_alcohol">Alcohol</string>
    <string name="text_coffee">Coffee</string>
    <string name="text_pasta">Pasta</string>
    <string name="text_cold_drinks">Cold Drinks</string>
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>

    <string-array name="string_array_alcohol">
        <item>Vodka</item>
        <item>Rum</item>
        <item>Whiskey</item>
        <item>Gin</item>
        <item>Tequila</item>
    </string-array>

    <string-array name="string_array_coffee">
        <item>Espresso</item>
        <item>Macchiato</item>
        <item>Cappuccino</item>
        <item>Cafe Latte</item>
        <item>Ristretto</item>
    </string-array>

    <string-array name="string_array_pasta">
        <item>Carbonara</item>
        <item>Capellini</item>
        <item>Spaghetti</item>
        <item>Gnocchi</item>
        <item>Lasagnette</item>
    </string-array>

    <string-array name="string_array_cold_drinks">
        <item>Cola</item>
        <item>Lemonade</item>
        <item>Citrus soda</item>
        <item>Juice</item>
        <item>Sparkling Water</item>
    </string-array>

</resources>
