<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/drawer_layout_my_information"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
     >


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/side_nav_bar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageViewt"
            android:layout_width="101dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/profile_icon" />

        <TextView
            android:layout_width="102dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title" />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/buttont"
    android:text="change photo"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/shape_button"
            android:orientation="vertical">


        <TextView
            android:id="@+id/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/full_name"
            android:textSize="24sp"
            android:padding="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="20dp"
            android:text="@string/full_name"
            android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/app_bar_side_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_my_information"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_side_bar"
        app:menu="@menu/activity_side_bar_drawer" />




</android.support.v4.widget.DrawerLayout>